🐲⏳ Updated with Glitch

--- a/views/index.html
+++ b/views/index.html
@@ -39,13 +39,13 @@
     <div id='testui' style='margin-left: 5%'>
       <h2 style="text-align: left">Front-End:</h2>
       <h3>Get single price and total likes</h3>
-      <form id="testForm2" class="border">
+      <form action="/api/stock-prices" id="testForm2" class="border">
         <input type="text" name="stock" placeholder="goog" style="width: 100px" required=''>
         <input type="checkbox" name="like" value=true> Like?<br>
         <button type="submit">Get Price!</button>
       </form>
       <h3>Compare and get relative likes</h3>
-      <form id="testForm" class="border">
+      <form action="/api/stock-prices" id="testForm" class="border">
         <input type="text" name="stock" placeholder="goog" style="width: 100px" required=''>
         <input type="text" name="stock" placeholder="msft" style="width: 100px" required=''>
         <input type="checkbox" name="like" value=true> Like both?<br>
